[gd_scene load_steps=5 format=3 uid="uid://d15dr447oxpgn"]

[ext_resource type="Script" path="res://main_window/side_panel/help/help.gd" id="1_1rhmu"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ag0c0"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_02jsr"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_unkbq"]

[node name="Help" type="VBoxContainer"]
theme_override_constants/separation = 32
script = ExtResource("1_1rhmu")

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Heading" type="Label" parent="VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Help"
horizontal_alignment = 1

[node name="Version" type="HBoxContainer" parent="VBox"]
unique_name_in_owner = true
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="VBox/Version"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Version:"

[node name="ID" type="LineEdit" parent="VBox/Version"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_uneditable_color = Color(0.505882, 0.631373, 0.756863, 1)
theme_override_constants/minimum_character_width = 0
theme_override_font_sizes/font_size = 12
theme_override_styles/focus = SubResource("StyleBoxEmpty_ag0c0")
theme_override_styles/read_only = SubResource("StyleBoxEmpty_02jsr")
theme_override_styles/normal = SubResource("StyleBoxEmpty_unkbq")
text = "alpha"
editable = false
expand_to_text_length = true
drag_and_drop_selection_enabled = false
flat = true
select_all_on_focus = true

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="VBox" type="VBoxContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="KeyBindingsBlock1" type="VBoxContainer" parent="ScrollContainer/VBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 8

[node name="KeyBindingsBlock2" type="VBoxContainer" parent="ScrollContainer/VBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 8

[node name="KeyBindingsBlock3" type="VBoxContainer" parent="ScrollContainer/VBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 8

[node name="KeyBindingsBlock4" type="VBoxContainer" parent="ScrollContainer/VBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 8
